Fix: ChatService returns ConversationDto/MessageDto, maps entity fields correctly